--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,5 @@
-<% provide(:title, 'Contact') %> # this provides the variable page_title for the full_title function that is run in the layout for the application. (provides are retrived with yield(:title[the symbol name])
+ <%-# this provides the variable page_title for the full_title function that is run in the layout for the application. (provides are retrived with yield(:title[the symbol name]) -%>
+<% provide(:title, 'Contact') %> 
 <h1>Contact</h1>
 <p>
   Contact the Ruby on Rails Tutorial about the sample app at the
