--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,4 @@
-<%= @user.name %>, <%= @user.email %>
+<%= Time.now %> <br>
+<%= @user.name %>, <%= @user.email %> <br>
+Created at <%= @user.created_at %>, Updated at <%= @user.updated_at %>
+
