--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,6 @@
+<!--
+   -the underscore in the name is used to indicate that this is a partial
+   -->
 <footer class="footer">
   <small>
     The <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
