Added quick comment

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,6 @@
+<!--
+   -the underscore in the name is used to indicate that this is a partial
+   -->
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
       <%= link_to "sample app", root_path, id: "logo" %>
