--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,20 +1,29 @@
-<!--
-   -the underscore in the name is used to indicate that this is a partial
-   -->
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="container">
-    <%= link_to "sample app", root_path, id: "logo" %>
-    <nav>
+<header class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Band and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <div id="logo">
+          <%= link_to "Pill Counter", root_path, class: "logo" %>
+      </div>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collection-navlinks" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    </div>
+    <!-- -Collect nav links for toggling -->
+    <div class="collapse navbar-collapse" id="collection-navlinks"> 
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Help", help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to "Users", '#' %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
+              <li><%= link_to "Dashboard", '/dashboard' %></li>
               <li><%= link_to "Profile", current_user %></li>
               <li><%= link_to "Settings", '#' %></li>
               <li class="divider"></li>
@@ -27,6 +36,6 @@
           <li><%= link_to "Log in", login_path %></li>
         <% end %>
       </ul>
-    </nav>
+    </div> <!-- navbar-collapse -->
   </div>
 </header>
